Fix style z-index

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -67,6 +67,7 @@ input {
 
 .hidden-box {
   position: relative;
+  z-index: -1;
   &:before {
     content: "";
     position: absolute;
